Bug #17038 distribution of schema operation to multiple binlogs missing/multiple entries
Submitted: 2 Feb 2006 14:28 Modified: 4 Apr 2006 9:33
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1.6-beta OS:
Assigned to: Tomas Ulin Target Version:

[2 Feb 2006 14:28] Tomas Ulin
Description:
 master-bin.000001	#	Table_map	#	#	cluster_replication.apply_status
  master-bin.000001	#	Write_rows	#	#	
  master-bin.000001	#	Query	#	#	COMMIT
- master-bin.000001	#	Query	#	#	use `mysqltest`; drop table `t1`
  reset master;
  reset master;
  use test;
--- 40,45 ----
***************
*** 55,61 ****
--- 55,63 ----
  master-bin1.000001	#	Write_rows	#	#	
  master-bin1.000001	#	Query	#	#	COMMIT
  master-bin1.000001	#	Query	#	#	drop database mysqltest
+ master-bin1.000001	#	Query	#	#	drop database mysqltest
  master-bin1.000001	#	Query	#	#	use `test`; create table t1 (a int primary key)
engine=ndb
+ master-bin1.000001	#	Query	#	#	use `test`; create table t1 (a int primary key)
engine=ndb
  drop table t2;

How to repeat:
sample output from ndb_binlog_ddl_multi
[6 Feb 2006 10:52] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/2173
[4 Apr 2006 9:33] Tomas Ulin
no need to document separately

we don't see this anymore.  Was most probably fixed by another patch.