Bug #17038, distribution of schema operation to multiple binlogs missing/multiple entries, partial fix - log alter table directly in server instead of in handler - acknowledge alter table _after_ all binlog events have been processed